[FIX] spell miss and page jump

--- a/style.css
+++ b/style.css
@@ -8,3 +8,7 @@
 body{
     font-family: 'Exo', sans-serif;
 }
+
+:target {
+    scroll-margin-top: 80px;
+}
